--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>English Research Paper</title>
+    <style src="style.css"></style>
+    <script async defer src="script.js"></script>
 </head>
 <body>
     
